Fix #28 grade report alignment

--- a/less/grades.less
+++ b/less/grades.less
@@ -1,4 +1,7 @@
-#page-grade-report-grader-index {
+.path-grade-report-grader {
+    #fixed_column {
+        margin-top: 4px;
+    }
     #user-grades {
         margin-top: 20px;
     }
